# TwitterSentimentAnalysis

./: .gitignore  Notes.md  README.md  kafkaProducer.py  pyproject.toml  pyspark_main.py
docs/: Debug.md  Tweepy.md  conf.md
resources/: config_eg.yml
tests/: pysparkTest.py  pyspark_test.py
twittersentimentanalysis/: .env  conf.md  config_eg.yml  kafkaProducer.py  kafka_consumer.py  kafka_producer.py  pysparkMain.py  pysparkTest.py  test.py  tweet_parser.py
twittersentimentanalysis/alternative_approaches/: tweet_parser_socket_client.py  tweet_parser_socket_server.py
