[tool.poetry]
name = "twittersentimentanalysis"
version = "0.1.0"
description = ""
authors = ["Varun Pius Rodriguus <wraith@test.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
findspark = "^2.0.1"
tweepy = "^4.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
